--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
         </div>
         <footer>
-            &copy; 2025 Your Company Name. All rights reserved.
+            &copy; 2025 Yash Goyal
         </footer>
     </div>
 </body>
